Update Maven Hybrid Framework for Bank Guru
+ Add preference to disable chrome notification and save password pop-up
+ Add new page object and new page UI for testcase: TC_AddNewCustomer

--- a/com.hybrid.nopcommerce/test-output/index.html
+++ b/com.hybrid.nopcommerce/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--1223936594\testng-customsuite.xml</span>
+                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--1139202563\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_Login" class="method navigator-link" hash-for-method="TC_01_Login_Empty_Username_Password">TC_01_Login_Empty_Username_Password</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_Login" class="method navigator-link" hash-for-method="TC_02_Login_Incorrect_Username_Password">TC_02_Login_Incorrect_Username_Password</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_Login" class="method navigator-link" hash-for-method="TC_03_Login_Successfully">TC_03_Login_Successfully</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_AddNewCustomer" class="method navigator-link" hash-for-method="TC_01_Create_New_Customer">TC_01_Create_New_Customer</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.bankguru.TC_Login</span>
+              <span class="class-name">com.bankguru.TC_AddNewCustomer</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_Login_Empty_Username_Password">
-                  </a> <!-- TC_01_Login_Empty_Username_Password -->
-                  <span class="method-name">TC_01_Login_Empty_Username_Password</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_02_Login_Incorrect_Username_Password">
-                  </a> <!-- TC_02_Login_Incorrect_Username_Password -->
-                  <span class="method-name">TC_02_Login_Incorrect_Username_Password</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_03_Login_Successfully">
-                  </a> <!-- TC_03_Login_Successfully -->
-                  <span class="method-name">TC_03_Login_Successfully</span>
+                  <a name="TC_01_Create_New_Customer">
+                  </a> <!-- TC_01_Create_New_Customer -->
+                  <span class="method-name">TC_01_Create_New_Customer</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--1223936594\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--1139202563\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.bankguru.TC_Login&quot;/&gt;
+      &lt;class name=&quot;com.bankguru.TC_AddNewCustomer&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_03_Login_Successfully')
-data.setCell(0, 2, 'com.bankguru.TC_Login')
-data.setCell(0, 3, 2091);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TC_02_Login_Incorrect_Username_Password')
-data.setCell(1, 2, 'com.bankguru.TC_Login')
-data.setCell(1, 3, 1392);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TC_01_Login_Empty_Username_Password')
-data.setCell(2, 2, 'com.bankguru.TC_Login')
-data.setCell(2, 3, 439);
+data.setCell(0, 1, 'TC_01_Create_New_Customer')
+data.setCell(0, 2, 'com.bankguru.TC_AddNewCustomer')
+data.setCell(0, 3, 2571);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,34 +219,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.bankguru.TC_Login</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.bankguru.TC_AddNewCustomer</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuit</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">30 ms</span>
+                <span class="method-start">34 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TC_01_Login_Empty_Username_Password</span>
-                <span class="method-start">13380 ms</span>
+                <span class="method-name">TC_01_Create_New_Customer</span>
+                <span class="method-start">14527 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_02_Login_Incorrect_Username_Password</span>
-                <span class="method-start">13863 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_03_Login_Successfully</span>
-                <span class="method-start">15257 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">afterClass</span>
-                <span class="method-start">17349 ms</span>
-              </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">cleanExecutableDriver</span>
-                <span class="method-start">18051 ms</span>
+                <span class="method-start">17155 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
