--- a/com.hybrid.nopcommerce/test-output/emailable-report.html
+++ b/com.hybrid.nopcommerce/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">18,020</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">17,122</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.bankguru.TC_Login</td><td><a href="#m0">TC_01_Login_Empty_Username_Password</a></td><td rowspan="1">1662915670228</td><td rowspan="1">439</td></tr><tr class="passedeven"><td><a href="#m1">TC_02_Login_Incorrect_Username_Password</a></td><td rowspan="1">1662915670711</td><td rowspan="1">1392</td></tr><tr class="passedeven"><td><a href="#m2">TC_03_Login_Successfully</a></td><td rowspan="1">1662915672105</td><td rowspan="1">2091</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.bankguru.TC_AddNewCustomer</td><td><a href="#m0">TC_01_Create_New_Customer</a></td><td rowspan="1">1663524900256</td><td rowspan="1">2571</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.bankguru.TC_Login#TC_01_Login_Empty_Username_Password</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.bankguru.TC_Login#TC_02_Login_Incorrect_Username_Password</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.bankguru.TC_Login#TC_03_Login_Successfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.bankguru.TC_AddNewCustomer#TC_01_Create_New_Customer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
