--- a/com.hybrid.nopcommerce/test-output/old/Default suite/methods.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/methods.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cac990">  <td>22/09/19 01:14:45</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.bankguru.TC_AddNewCustomer@4c4f4365]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1531545666</td>   <td></td> </tr>
-<tr bgcolor="91796b">  <td>22/09/19 01:14:45</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_AddNewCustomer.beforeClass()[pri:0, instance:com.bankguru.TC_AddNewCustomer@4c4f4365]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1531545666</td>   <td></td> </tr>
-<tr bgcolor="91796b">  <td>22/09/19 01:15:00</td>   <td>14520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddNewCustomer.TC_01_Create_New_Customer()[pri:0, instance:com.bankguru.TC_AddNewCustomer@4c4f4365]">TC_01_Create_New_Customer</td> 
-  <td>main@1531545666</td>   <td></td> </tr>
-<tr bgcolor="cac990">  <td>22/09/19 01:15:02</td>   <td>17148</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.bankguru.TC_AddNewCustomer@4c4f4365]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1531545666</td>   <td></td> </tr>
+<tr bgcolor="cac990">  <td>22/09/25 00:01:24</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.bankguru.TC_AddAndEditNewCustomer@460510aa]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@270734602</td>   <td></td> </tr>
+<tr bgcolor="91796b">  <td>22/09/25 00:01:24</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_AddAndEditNewCustomer.beforeClass()[pri:0, instance:com.bankguru.TC_AddAndEditNewCustomer@460510aa]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@270734602</td>   <td></td> </tr>
+<tr bgcolor="91796b">  <td>22/09/25 00:01:39</td>   <td>15065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddAndEditNewCustomer.TC_01_Create_New_Customer()[pri:0, instance:com.bankguru.TC_AddAndEditNewCustomer@460510aa]">TC_01_Create_New_Customer</td> 
+  <td>main@270734602</td>   <td></td> </tr>
+<tr bgcolor="91796b">  <td>22/09/25 00:01:42</td>   <td>17465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddAndEditNewCustomer.TC_01_Edit_New_Customer()[pri:0, instance:com.bankguru.TC_AddAndEditNewCustomer@460510aa]">TC_01_Edit_New_Customer</td> 
+  <td>main@270734602</td>   <td></td> </tr>
+<tr bgcolor="91796b">  <td>22/09/25 00:01:48</td>   <td>24144</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_AddAndEditNewCustomer.afterClass()[pri:0, instance:com.bankguru.TC_AddAndEditNewCustomer@460510aa]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@270734602</td>   <td></td> </tr>
+<tr bgcolor="cac990">  <td>22/09/25 00:01:49</td>   <td>24875</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.bankguru.TC_AddAndEditNewCustomer@460510aa]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@270734602</td>   <td></td> </tr>
 </table>
