Update BankGuru TC on com.hybrid.nopcommerce project + Add new TC_ValidateCustomer to validate Customer fields

--- a/com.hybrid.nopcommerce/test-output/index.html
+++ b/com.hybrid.nopcommerce/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--780782389\testng-customsuite.xml</span>
+                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--371600271\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,12 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_AddAndEditNewCustomer" class="method navigator-link" hash-for-method="TC_01_Create_New_Customer">TC_01_Create_New_Customer</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_ValidateCustomer" class="method navigator-link" hash-for-method="TC_01_Empty_Customer">TC_01_Empty_Customer</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_AddAndEditNewCustomer" class="method navigator-link" hash-for-method="TC_01_Edit_New_Customer">TC_01_Edit_New_Customer</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.bankguru.TC_ValidateCustomer" class="method navigator-link" hash-for-method="TC_02_Verify_Blank_Error">TC_02_Verify_Blank_Error</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.bankguru.TC_AddAndEditNewCustomer</span>
+              <span class="class-name">com.bankguru.TC_ValidateCustomer</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_Create_New_Customer">
-                  </a> <!-- TC_01_Create_New_Customer -->
-                  <span class="method-name">TC_01_Create_New_Customer</span>
+                  <a name="TC_01_Empty_Customer">
+                  </a> <!-- TC_01_Empty_Customer -->
+                  <span class="method-name">TC_01_Empty_Customer</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_Edit_New_Customer">
-                  </a> <!-- TC_01_Edit_New_Customer -->
-                  <span class="method-name">TC_01_Edit_New_Customer</span>
+                  <a name="TC_02_Verify_Blank_Error">
+                  </a> <!-- TC_02_Verify_Blank_Error -->
+                  <span class="method-name">TC_02_Verify_Blank_Error</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--780782389\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--371600271\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +156,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.bankguru.TC_AddAndEditNewCustomer&quot;/&gt;
+      &lt;class name=&quot;com.bankguru.TC_ValidateCustomer&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,18 +198,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_01_Edit_New_Customer')
-data.setCell(0, 2, 'com.bankguru.TC_AddAndEditNewCustomer')
-data.setCell(0, 3, 6677);
+data.setCell(0, 1, 'TC_01_Empty_Customer')
+data.setCell(0, 2, 'com.bankguru.TC_ValidateCustomer')
+data.setCell(0, 3, 547);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TC_01_Create_New_Customer')
-data.setCell(1, 2, 'com.bankguru.TC_AddAndEditNewCustomer')
-data.setCell(1, 3, 2354);
+data.setCell(1, 1, 'TC_02_Verify_Blank_Error')
+data.setCell(1, 2, 'com.bankguru.TC_ValidateCustomer')
+data.setCell(1, 3, 341);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 888 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,30 +235,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.bankguru.TC_AddAndEditNewCustomer</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.bankguru.TC_ValidateCustomer</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuit</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">27 ms</span>
+                <span class="method-start">29 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TC_01_Create_New_Customer</span>
-                <span class="method-start">15070 ms</span>
+                <span class="method-name">TC_01_Empty_Customer</span>
+                <span class="method-start">14189 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">TC_01_Edit_New_Customer</span>
-                <span class="method-start">17470 ms</span>
+                <span class="method-name">TC_02_Verify_Blank_Error</span>
+                <span class="method-start">14788 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">24149 ms</span>
+                <span class="method-start">15131 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">cleanExecutableDriver</span>
-                <span class="method-start">24880 ms</span>
+                <span class="method-start">15818 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
