--- a/com.hybrid.nopcommerce/test-output/old/Default suite/classes.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.bankguru.TC_AddAndEditNewCustomer</td>
+<td>com.bankguru.TC_ValidateCustomer</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_01_Edit_New_Customer</td>
+<td>TC_01_Empty_Customer</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_01_Create_New_Customer</td>
+<td>TC_02_Verify_Blank_Error</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
